# BlockingIO-client

./: .gitignore  Cargo.toml  README.md
doc/: ClientState.dot
rsc/textures/: title.xcf
rsc/textures/atlas/: main.xcf
rsc_included/shader/: gui.frag  gui.vert  world.frag  world.vert
rsc_included/textures/: title.xcf
rsc_included/textures/atlas/: main.xcf
src/: camera.rs  engine.rs  field.rs  gui_renderer.rs  main.rs  mock_server.rs  player.rs  setting_storage.rs  shader.rs  socketio_encoding.rs  tracing_ex.rs  types.rs  vao_ex.rs  world.rs
src/api/: client.rs  json.rs  mod.rs
src/vao/: mod.rs  vao_builder.rs
src/world/: mod.rs  renderer.rs  vao_builder.rs  world.rs
